# oh-my-harness

./: .gitignore  Cargo.toml  LICENSE  README.md  mise.toml  oh-my-harness.code-workspace
.devcontainer/: Dockerfile  README.md  devcontainer.ini.example  devcontainer.json  docker-compose.template.yml
.devcontainer/conf/cpp/: .clang-tidy  .clangd  config.sh
.devcontainer/conf/cpp/vscode/: extensions.json  settings.json
.devcontainer/conf/python/: config.sh  pip.conf
.devcontainer/conf/python/vscode/: extensions.json
.devcontainer/conf/rust/: config.sh
.devcontainer/conf/rust/vscode/: extensions.json  settings.json
.devcontainer/conf/workspace/: config.sh  justfile
.devcontainer/conf/workspace/vscode/: extensions.json  launch.json  settings.json
.devcontainer/scripts/: helper.sh  init.sh  postCreate.sh  postStart.sh
bins/omh/: Cargo.toml
bins/omh-dev/: Cargo.toml
bins/omh-dev/src/: bootstrap.rs  devtools.rs  main.rs
bins/omh/src/: auth.rs  cli.rs  commands.rs  config.rs  main.rs  run.rs  slash.rs  tui.rs
bins/omh/src/tui/: input_ast.rs  input_intent.rs  mention_parser.rs  slash_input.rs
bins/omt/: Cargo.toml
bins/omt/src/: api.rs  events.rs  executor.rs  main.rs  planner.rs  recovery.rs  registry.rs  retry.rs  scheduler.rs  state.rs  task.rs  team.rs  tui.rs  worktree.rs
docs/: configuration.md  oh-my-harness-overview.md  omh-dev.md
libs/a2a/: Cargo.toml
libs/a2a/src/: client.rs  lib.rs  registry.rs  server.rs  types.rs
libs/a2a/tests/: integration.rs
libs/acp/: Cargo.toml
libs/acp/src/: client.rs  lib.rs  server.rs  types.rs
libs/agent/: Cargo.toml
libs/agent/agents/: explore.md  librarian.md  oracle.md  orchestrator.md  planner.md  reviewer.md  worker.md
libs/agent/src/: lib.rs
libs/bus/: Cargo.toml
libs/bus/src/: lib.rs
libs/dirs/: Cargo.toml
libs/dirs/src/: lib.rs
libs/evolution/: Cargo.toml
libs/evolution/src/: lib.rs
libs/hook/: Cargo.toml
libs/hook/src/: builtins.rs  lib.rs
libs/mcp/: Cargo.toml
libs/mcp/src/: lib.rs
libs/memory/: Cargo.toml
libs/memory/src/: lib.rs
libs/message/: Cargo.toml
libs/message/src/: lib.rs
libs/permission/: Cargo.toml
libs/permission/src/: lib.rs
libs/provider/: Cargo.toml
libs/provider/src/: anthropic.rs  copilot.rs  lib.rs  mock.rs  openai_common.rs  openai_compat.rs
libs/runtime/: Cargo.toml
libs/runtime/src/: agent_runtime.rs  background.rs  config.rs  harness.rs  lib.rs  session_logger.rs  session_runtime.rs  spawn_tool.rs  telemetry.rs
libs/runtime/tests/: agent_loop_test.rs
libs/session/: Cargo.toml
libs/session/src/: lib.rs
libs/skill/: Cargo.toml
libs/skill/skills/: update-best-models.md
libs/skill/src/: lib.rs  skill_tool.rs
libs/snapshot/: Cargo.toml
libs/snapshot/src/: lib.rs
libs/tool/: Cargo.toml
libs/tool/src/: lib.rs  parallel.rs  truncate.rs
libs/tool/src/builtins/: bash.rs  file_ops.rs  mod.rs  search.rs
libs/trace/: Cargo.toml
libs/trace/src/: lib.rs
tests/evals/: smoke.toml
