[workspace]
members = [
    "bins/omh",
    "bins/omh-dev",
    "libs/acp",
    "libs/agent",
    "libs/bus",
    "libs/evolution",
    "libs/hook",
    "libs/mcp",
    "libs/memory",
    "libs/message",
    "libs/permission",
    "libs/provider",
    "libs/runtime",
    "libs/session", "libs/skill",
    "libs/snapshot",
    "libs/tool",
    "libs/trace",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
syntect = "5"
# internal crates
acp = { path = "libs/acp" }
agent = { path = "libs/agent" }
bus = { path = "libs/bus" }
evolution = { path = "libs/evolution" }
hook = { path = "libs/hook" }
mcp = { path = "libs/mcp" }
memory = { path = "libs/memory" }
message = { path = "libs/message" }
permission = { path = "libs/permission" }
provider = { path = "libs/provider" }
runtime = { path = "libs/runtime" }
session = { path = "libs/session" }
skill = { path = "libs/skill" }
snapshot = { path = "libs/snapshot" }
tool = { path = "libs/tool" }
omh-trace = { path = "libs/trace" }

# external
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
crossterm = "0.29.0"
futures = "0.3"
glob = "0.3"
ignore = "0.4"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
