[workspace]
members = [
    "bins/omh",
    "bins/omh-dev",
    "bins/omt",
    "libs/a2a",
    "libs/acp",
    "libs/agent",
    "libs/bus",
    "libs/dirs",
    "libs/evolution",
    "libs/hook",
    "libs/mcp",
    "libs/memory",
    "libs/message",
    "libs/permission",
    "libs/provider",
    "libs/runtime",
    "libs/session", "libs/skill",
    "libs/tool",
    "libs/trace",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
syntect = "5"
# internal crates
a2a = { path = "libs/a2a" }
acp = { path = "libs/acp" }
agent = { path = "libs/agent" }
bus = { path = "libs/bus" }
dirs = { path = "libs/dirs" }
evolution = { path = "libs/evolution" }
hook = { path = "libs/hook" }
mcp = { path = "libs/mcp" }
memory = { path = "libs/memory" }
message = { path = "libs/message" }
permission = { path = "libs/permission" }
provider = { path = "libs/provider" }
runtime = { path = "libs/runtime" }
session = { path = "libs/session" }
skill = { path = "libs/skill" }
tool = { path = "libs/tool" }
omh-trace = { path = "libs/trace" }

# external
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.29.0"
axum = { version = "0.8", features = ["json"] }
futures = "0.3"
glob = "0.3"
ignore = "0.4"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
libc = "0.2"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
