[package]
name = "omt"
version = "0.1.0"
edition = "2024"

[dependencies]
a2a = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
crossterm = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
message = { workspace = true }
provider = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
unicode-width = "0.2"
