[package]
name = "evolution"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
memory = { workspace = true }
provider = { workspace = true }
session = { workspace = true }
message = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
