[package]
name = "hook"
version = "0.1.0"
edition.workspace = true

[dependencies]
agent = { workspace = true }
bus = { workspace = true }
tool = { workspace = true }
message = { workspace = true }
permission = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
