[package]
name = "memory"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
