[package]
name = "provider"
version = "0.1.0"
edition.workspace = true

[dependencies]
message = { workspace = true }
omh-trace = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
