[package]
name = "runtime"
version = "0.1.0"
edition.workspace = true

[dependencies]
agent = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bus = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
evolution = { workspace = true }
futures = { workspace = true }
hook = { workspace = true }
mcp = { workspace = true }
memory = { workspace = true }
message = { workspace = true }
permission = { workspace = true }
provider = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
session = { workspace = true }
skill = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tool = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
