[package]
name = "skill"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
glob = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tool = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
ulid = { workspace = true }
