[package]
name = "tool"
version = "0.1.0"
edition.workspace = true

[dependencies]
message = { workspace = true }
omh-trace = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
